# ai-manhua-editor

./: .env.example  .gitignore  LICENSE  Makefile  pyproject.toml  requirements.txt
config/: default.yaml  mimo.yaml  openclaw.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  README.md
openclaw/: agent_config.yaml  cron_schedule.yaml  skill_manifest.json
scripts/: deploy.sh  setup.sh  start.sh
src/: __init__.py  cli.py
src/agents/: __init__.py  image_generator.py  quality_assessor.py  script_parser.py  storyboard_agent.py  subtitle_generator.py  video_editor.py  voice_synthesizer.py
src/core/: __init__.py  config_manager.py  event_bus.py  workflow_engine.py
src/models/: __init__.py  enums.py  schemas.py
src/skills/: __init__.py  image_gen_api.py  mimo_api.py  openclaw_skill.py  tts_api.py  video_compose.py
src/storage/: __init__.py  asset_manager.py  project_store.py
src/web/: __init__.py  api_server.py  websocket_handler.py
templates/: prompts.yaml  styles.json
tests/: test_agents.py  test_workflow.py
workflows/: fast.json  premium.json  standard.json
